2010-05-02  0.29  H.Merijn Brand

    * Fix git URL in META.yml
    * Add empty CLONE method to prevent warning when cloning threads
    * Minimum perl 5.8.1
    * Minimum Text::CSV_XS 0.71
    * Support for f_encoding (needs DBD::File 0.38)

2010-03-16  0.28  H.Merijn Brand

    * Remove t/00_minimumversion.t from distribution
    * Dropped YAML spec to 1.0
    * Sync up with SQL::Statement 1.25
      NOTE: Internals of both modules changed. They will change again for
            SQL::Statement 2.0

2010-02-17  0.27  H.Merijn Brand

    * Upped copyright to 2010
    * Doc-fix typo in link (Detlef Pilzecker)
    * Doc-fix small typo's

2009-11-10  0.26  H.Merijn Brand

    * Adjustments for windows (RT#50544)
    * Mark all non-\w chars illegal in field and table names
    * Fix field types after execute (RT#51090, vgdoqd)
    * Fix for NULL joins. Requires SQL::Statement 1.23 (RT#43010, JBAZIK)

2009-10-15  0.25  H.Merijn Brand

    * Raised minimum perl version to 5.005_03
    * Requires Text::CSV_XS 0.43 (needs eof () method and
      error_diag ()) (RT#33764)
    * Code cleanup (perlcritic, style, layout)
    * Implemented f_ext
    * Implemented f_schema (in DBD::File)
    * Split csv handles for input (no eol default) and
      output (default "\r\n") (RT#33767)
    * Updated info URL's
    * Cleaned up tests
    * Tests now use Test::More
    * Cut down README. No need to be a duplicate module pod
    * Added TODO to documentation
    * Added examples/ from docs
    * Add csv_null
    * Add csv_* to pass to the parser
    * Improved error handling and reporting
    * Table names case sensitiveness
    * Implemented raw_header (RT#44583)

2005-08-10  0.23  Jeff Zucker <jzuckerATcpan.org>

    * fixed bug in automatic column generation, defining
      col_names => [] will auto generate col1, col2, etc.
      thanks for bug report, harleypig on AnnoCPAN

    * added support for multi-character end-of-line separators