@@ -1,10 +1,11 @@
-2010-05-02  0.29  H.Merijn Brand
+2010-05-03  0.29  H.Merijn Brand
 
     * Fix git URL in META.yml
     * Add empty CLONE method to prevent warning when cloning threads
     * Minimum perl 5.8.1
     * Minimum Text::CSV_XS 0.71
     * Support for f_encoding (needs DBD::File 0.38)
+    * Documentation updates
 
 2010-03-16  0.28  H.Merijn Brand
 
